Switch from PostgreSQL to MongoDB

--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 
-# Server
+# ✅ Server Configuration
 HOST=0.0.0.0
 PORT=1337
 
-# Secrets
+# ✅ Secrets (Do NOT expose publicly)
 APP_KEYS=0KAH6Xcg3v3CTlPkdeLLxQ==,lO1A2XeCI8c8wmotPE1DWA==,cogWKGmuQB6GYYDaUdZB/Q==,QsBgvpOVwNaO6HM/CFnIIA==
 API_TOKEN_SALT=ykjmcIpjJ4CuhsilxdYMTQ==
 ADMIN_JWT_SECRET=GYvWVmCboflepzelS//GPA==
 TRANSFER_TOKEN_SALT=25jeDdqRWlfGOPpOU7WkmQ==
 
-# Database
-DATABASE_CLIENT=sqlite
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_NAME=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_SSL=false
-DATABASE_FILENAME=.tmp/data.db
-JWT_SECRET=xxG8DOASi2gRQzDSjrzv9A==
+# ✅ MongoDB Configuration
+DATABASE_CLIENT=mongo
+DATABASE_URI=mongodb+srv://xdevjs:$Root123654@cluster0.1fzvq.mongodb.net/mystrapi?retryWrites=true&w=majority&appName=Cluster
+DATABASE_NAME=mystrapi
+
+# ✅ File Uploads (Cloudinary)
+UPLOAD_PROVIDER=cloudinary
+CLOUDINARY_NAME=your_cloudinary_name
+CLOUDINARY_API_KEY=your_cloudinary_api_key
+CLOUDINARY_API_SECRET=your_cloudinary_api_secret
