--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "5.10.2",
     "@strapi/strapi": "5.10.2",
     "better-sqlite3": "11.3.0",
+    "mongoose": "^8.10.1",
     "pg": "^8.13.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
